Fri Jan 26 22:47:55 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: added driver list entry and usages for Geek Squad GS1285U, 
   which is apparently identical to Cyber Power AE550 (0764/0501).

Tue Jan 23 21:12:15 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Add firmware revision to all included cpu's in bcmxcp.c.
 - Remove reading of topology block for num phases. Use standard
   config block. ( Make it work on compaq ups again.) bcmxcp.c.

Tue Jan 23 20:19:31 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * server/conf.[ch], server/upsd.[ch]:
   - don't load upsd.conf, ups.conf and upsd.users all at the same time
     (removed load_conf() function)
   - load the configuration files after chroot'ing
   - if the environment variable NUT_STATEPATH was present, there was a small
     memory leak (statepath would be dynamically allocated twice with xstrdup)

Mon Jan 22 21:34:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - man/upsd.8, man/upsd.conf.5: remove -i and -p commandline options,
   add LISTEN parameter to upsd.conf, add IPv6 examples
 - man/upsclient.3, man/upscli_*.3: ups format upsname[@hostname[:port]],
   add default hostname "localhost", remove upscli_splitname where not
   applicable
 - man/upsc.8, man/upscmd.8, man/upslog.8, man/upsrw.8: ups format
   upsname[@hostname[:port]], add default hostname "localhost"
 - man/upsmon.8, man/upsmon.conf.5: ups format upsname[@hostname[:port]],
   add default hostname "localhost"

Mon Jan 22 06:02:55 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: added support for Tripplite SmartOnline SU1500RTXL2ua
 - scripts/path-to-subdriver.sh: updated for new user messages

Sun Jan 21 23:56:03 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - ChangeLog: converted all dates to UTC

Sun Jan 21 22:21:41 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: better messages for unrecognized productids.
